<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:id="@+id/bglayout"
		    >
			<RelativeLayout 
			    android:layout_width="313dip"
			    android:layout_height="177dip"
			    android:layout_gravity="center"
			    android:background="@drawable/setpermission_background">
			
			    <TextView
			        android:layout_width="104dip"
			        android:layout_height="50dip"
			        android:gravity="center"
			        android:textSize="20sp"
			        android:textColor="#157EFB"
			        android:id="@+id/red"
			        android:text="@string/red_show" />
			    <TextView
			        android:layout_width="104dip"
			        android:layout_height="50dip"
			        android:gravity="center"
			        android:textSize="20sp"
			        android:layout_toRightOf="@id/red"
			        android:id="@+id/yellow"
			        android:textColor="@android:color/darker_gray"
			        android:text="@string/yellow_show" />
			    <TextView
			        android:layout_width="104dip"
			        android:layout_height="50dip"
			        android:gravity="center"
			        android:textSize="20sp"
			        android:layout_toRightOf="@id/yellow"
			        android:id="@+id/green"
			        android:textColor="@android:color/darker_gray"
			        android:text="@string/green_show" />
			    <ImageView
			        android:layout_width="104dip"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/red"
			        android:id="@+id/selectedline"
			        android:layout_marginLeft="3dip"
			        android:background="@drawable/permission_selectedline" />
			    <ImageView
			        android:layout_width="104dip"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/yellow"
			        android:id="@+id/selectedline2"
			        android:layout_toRightOf="@id/selectedline"
			        android:visibility="invisible"
			        android:background="@drawable/permission_selectedline" />
			    <ImageView
			        android:layout_width="104dip"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/green"
			        android:id="@+id/selectedline3"
			        android:layout_toRightOf="@id/selectedline2"
			        android:layout_marginRight="10dip"
			        android:visibility="invisible"
			        android:background="@drawable/permission_selectedline" />
				<FrameLayout 
			        android:layout_width="280dip"
			        android:layout_height="34dip"
			        android:id="@+id/renamelayout"
			        android:layout_below="@id/selectedline"
			        android:layout_centerHorizontal="true"
			        android:layout_marginTop="20dip" 
			        >
			        <EditText 
			            android:layout_width="fill_parent"
				        android:layout_height="fill_parent"
				        android:id="@+id/rename"
				        android:paddingLeft="1dip"
				        android:focusable="true"
				        android:singleLine="true"
				        android:ellipsize="end"
				        android:paddingRight="30dip"
				        android:background="@android:color/white"
				        android:textColor="@android:color/black"
			            />
			        <ImageView 
			            android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:id="@+id/clear"
				        android:paddingRight="2dip"
				        android:layout_gravity="right|center_vertical"
				        android:gravity="center"
				        android:src="@drawable/clear"
			            />
			    </FrameLayout>
				<RelativeLayout
			        android:layout_width="wrap_content"
			        android:layout_height="50dip"        
			        android:layout_below="@id/renamelayout"
			        android:layout_marginTop="15dip"
			        android:layout_marginLeft="3dip"
			        android:layout_marginRight="5dip"
			        android:visibility="visible"
			        >
				    <Button
				        android:layout_width="153dip"
				        android:layout_height="50dip"
				        android:layout_alignParentLeft="true"
				        android:background="@drawable/uploadcancel_btn"
				        android:id="@+id/cancel"
				        android:text="@string/cancel"
				        android:textSize="20sp"
				        android:textColor="#157EFB" />
					<Button
				        android:layout_width="153dip"
				        android:layout_height="50dip"
				        android:layout_marginLeft="1dip"
				        android:layout_toRightOf="@id/cancel"
				        android:background="@drawable/uploadok_btn"
				        android:id="@+id/confirm"
				        android:text="@string/ensure"
				        android:textSize="20sp"
				        android:textColor="#157EFB" />
			    </RelativeLayout>
			</RelativeLayout>
</FrameLayout>