<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	
    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />

    <com.google.zxing.view.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
	
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:id="@+id/qrcodebg">
        
		<include layout="@layout/details_title" />
		
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp10"
            android:text="@string/scan_tip"
            android:textColor="@color/white"
            android:id="@+id/qrcoderesult"
            android:textSize="@dimen/sp20"
            android:visibility="gone" />
            
        <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_above="@id/qrcoderesult"
	        android:layout_gravity="center">
	        
	            <Button
		            android:layout_width="260dip"
		            android:layout_height="60dip"
		            android:layout_alignParentBottom="true"
		            android:layout_centerHorizontal="true"
		            android:layout_marginBottom="@dimen/dp10"
		            android:id="@+id/back"
		            android:textColor="@color/white"
		            android:textSize="@dimen/sp20"
		            android:text="@string/back"
		            android:background="@drawable/qrcode_back_bg" />
	            
	            <Button
		            android:layout_width="100dip"
		            android:layout_height="50dip"
		            android:layout_alignParentBottom="true"
		            android:layout_toRightOf="@id/confirm"
		            android:layout_marginBottom="@dimen/dp10"
		            android:text="@string/cancel"
		            android:id="@+id/cancel"
		            android:textColor="@color/white"
		            android:textSize="@dimen/sp20"
		            android:visibility="gone" />
	     </RelativeLayout>
	     
        <ImageView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/qrcode_anim_bg_top"
	        android:id="@+id/qrcodeanimtop"
	        android:layout_alignParentTop="true"
	        />
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center">
	        <ImageView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/qrcode_anim_bg_bottom"
		        android:id="@+id/qrcodeanimbottom"
		        android:layout_alignParentBottom="true"
		        />
	    </RelativeLayout>
    </RelativeLayout>
	
</FrameLayout>